# ML-Ops

./: Session 1 - Logistic Regression.ipynb  Session 1 - Regression.ipynb  Session 3 - BiasVariance.ipynb  Session 5 Github.txt  Session4 - EmbeddingGeneration.ipynb  linear_reg_model1.pkl  logistic_regression_model.pkl  readme.txt  test.md
.github/: pipeline.yml
.github/workflows/: kubernetes_testing.yaml  train-and-register-model.yml
Day1/: Session 1 - Logistic Regression.ipynb  Session 1 - Regression.ipynb
Day10/: README.md  test.py
Day10/workshop/: 1_train_model.py  2_register_model.py  3.dockerize_model.py  3_app.py  app.py  current_data.csv  deployment.yaml  dockerfile  evidently_monitor.py  evidently_report.html  model.pkl  readme.md  register.py  registermodel.py  requirements.txt  service.yaml  test_data.pkl  train.py
Day10/workshop/.kube/: config
Day2/: Session 2 Exploaratory Data Analysis.ipynb
Day4/: Session 4 - Connecting to Langchain.ipynb  Session4 - EmbeddingGeneration.ipynb
Day6/hello-mlflow/: MLFLow Experiments.ipynb  main.py  model_pipeline.py  pyproject.toml
Day6/hello-world/: main.py
Day7/: Dockerfile  README.md  app.py  linear_regression_model.pkl
Day8/: README.md
Day8/workshop/: app.py  deployment.yaml  dockerfile  ice_cream.py  pyproject.toml  service.yaml
Final_Implementation/: depencency_creation.py  dependency_creation.py  run_pipeline.py
Pipeline_2/: README.md
ml-project/: MLproject  requirements.txt
ml-project/k8s/: fastapi-deployment.yaml
ml-project/src/: serve.py  train.py
ml-project/tests/: test_train.py
(+187 files in other folders)
